# plantsage

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENT_LOG.md  DEPLOY.md  Dockerfile  README.md  Taskfile.yaml  app.html  app.py  architecture.html  docker-compose.yml  package.json  pyproject.toml  requirements.txt  vercel.json
agent/: __init__.py  plant_agent.py  research_worker.py
api/: __init__.py  main.py  vertex_identifier.py
core/: config.py
db/: __init__.py  species_log.py
docs/research/: opensage-plant-intelligence-landscape.md
pipeline/: __init__.py  ingestion.py
reports/: __init__.py  generator.py
scripts/: check_live_ready.py  run_local_prod.sh  run_research_worker.py
skills/rayalaseema-flora-report/: SKILL.md
tests/: conftest.py  test_agent_parsing.py  test_api_async_research.py  test_api_import.py  test_dashboard_api.py  test_database_schema.py  test_frontend_contract.py  test_generator.py  test_identifier.py  test_ingestion.py  test_readiness.py  test_research_worker.py  test_runtime_files.py  test_scripts.py  test_species_log.py  test_vercel_entrypoint.py
