[project]
name = "plantsage"
version = "0.1.0"
description = "Rayalaseema flora intelligence prototype"
requires-python = ">=3.12,<3.15"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "python-multipart>=0.0.20",
  "anthropic>=0.69",
  "google-cloud-aiplatform>=1.153",
  "markdown2>=2.5",
  "weasyprint>=66.0",
]

[project.scripts]
app = "api.main:app"
